--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".TapActivity">
+        <activity android:name=".TapActivity"
+            android:theme="@style/AppTheme.NoActionBar.TabActivity">
 
         </activity>
     </application>
